# pidnet_ros

./: CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
cmake/: create_venv.cmake
pidnet_ros/: object_segmenter.py  pidnet_ros.py
src/pidnet_ros/: __init__.py  segmentation.py
