[project]
name = "pidnet-ros"
version = "0.1.0"
description = "ROS 2 wrapper for PIDNet"
readme = "README.md"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python",
    "torch",
    "torchvision",
]

[project.scripts]
segmentation_node = "pidnet_ros.segmentation:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
